test/spec_vectors/global/fail/module_5.wat
(module (global f32 (f32.neg (f32.const 0))))